2005-11-15  Alexey Proskuryakov  <ap@nypop.com>
        
        <http://bugzilla.opendarwin.org/show_bug.cgi?id=5717>
        REGRESSION: [WebCoreBridge _visiblePositionForPoint:(0,x)] crashes
        
        Reviewed by justin

        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge _visiblePositionForPoint:]): Early return if node found by hitTest is null.

2005-11-14  Adele Peterson  <adele@apple.com>

        Reviewed by Maciej and Darin.

        - fix for <rdar://problem/4233938> calling focus on contentEditable block elements should scroll them into view
        - fix for <rdar://problem/3624946> No 'blur' method defined on editable non-form DOM objects

        Added
        * fast/dom/focus-contenteditable.html
        * fast/dom/blur-contenteditable.html

        * khtml/ecma/kjs_dom.cpp: Added ElementFocus and ElementBlur to DOMElementProtoTable
        (KJS::DOMElementProtoFunc::callAsFunction): Added cases for ElementFocus and ElementBlur
        * khtml/ecma/kjs_dom.h: (KJS::DOMElement::): Added ElementFocus and ElementBlur to enum
        * khtml/html/html_elementimpl.cpp:
        (HTMLElementImpl::parseMappedAttribute): Added case for onblur.
        * khtml/xml/dom_elementimpl.cpp:
        (ElementImpl::focus): If the element isFocusable, calls setFocusNode to give element focus.
        (ElementImpl::blur): If the element is focused, calls setFocusNode to take away focus.
        * khtml/xml/dom_elementimpl.h: Added focus and blur functions
        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::setFocusNode): If we're trying to take focus away from a node, then we should clear the selection before we fire events.
        If we don't, then efforts to focus the cursor during the event can reset focus on the old node.
        (DocumentImpl::clearSelectionIfNeeded): Added function since we need to clear the selection at multiple points.
        * khtml/xml/dom_docimpl.h: Added clearSelectionIfNeeded.