@@ -1,3 +1,12 @@
+2005-11-15  Adele Peterson  <adele@apple.com>
+
+        Reviewed by Darin.
+
+        - fix for <rdar://problem/4341948> REGRESSION(TOT/GLENDALE): Safari won't tab between input/textarea elements if a select element is present
+
+        * kwq/KWQComboBox.mm: (-[KWQPopUpButton canBecomeKeyView]): removed check for tabsToAllControls() since we now always allow tabbing to select elements
+        * kwq/KWQListBox.mm: (-[KWQTableView canBecomeKeyView]): ditto.
+
 2005-11-15  Alexey Proskuryakov  <ap@nypop.com>
         
         <http://bugzilla.opendarwin.org/show_bug.cgi?id=5717>
